# OpenAI-Home-Assistant

./: .env  .gitignore  .pdm.toml  README.md  pyproject.toml
resources/: knowledgebase.csv
src/: gpt.py  main.py
